php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #63271 SOAP wsdl cache is not enabled after initial requests
Submitted: 2012-10-13 05:46 UTC Modified: 2012-11-29 12:45 UTC
From: jawed@php.net Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.4Git-2012-10-13 (Git) OS: Any
Private report: No CVE-ID: None
 [2012-10-13 05:46 UTC] jawed@php.net
Description:
------------
SOAP wsdl cache is not enabled after initial requests because the 
OnUpdateCacheEnabled is not always called per request context. Because of this, 
SOAP_GLOBAL(cache) is almost always "0" and WSDL caching is disabled.

WSDL caching is enabled and the caching type is set to WSDL_CACHE_MEMORY (although 
the cache type doesn't matter).

Expected result:
----------------
On subsequent requests after MINIT ext/soap returns the persistent sdlPtr.

Actual result:
--------------
On subsequent requests after MINIT ext/soap does not return the persistent sdlPtr 
because SOAP_GLOBAL(cache) is 0 (even though the sdlPtr exists in 
SOAP_GLOBAL(mem_cache)).

Patches

0001-Fix-SOAP-wsdl-cache-failing-to-look-at-mem_cache.patch (last revision 2012-10-13 05:47 UTC by jawed@php.net)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-10-13 05:47 UTC] jawed@php.net
The following patch has been added/updated:

Patch Name: 0001-Fix-SOAP-wsdl-cache-failing-to-look-at-mem_cache.patch
Revision:   1350107221
URL:        https://bugs.php.net/patch-display.php?bug=63271&patch=0001-Fix-SOAP-wsdl-cache-failing-to-look-at-mem_cache.patch&revision=1350107221
 [2012-10-13 05:50 UTC] jawed@php.net
Pull request: https://github.com/php/php-src/pull/215
 [2012-10-28 20:13 UTC] felipe@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: dmitry
 [2012-11-29 12:45 UTC] dmitry@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=dc2192c08766939700260128684255772ba4296f
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 [2012-11-29 12:45 UTC] dmitry@php.net
-Status: Assigned +Status: Closed
 [2012-11-29 12:45 UTC] dmitry@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=9e1d3cfdabf8665aec4d121bafa31cddd6ca7231
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 [2012-11-29 12:45 UTC] dmitry@php.net
The fix for this bug has been committed.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-11-30 06:30 UTC] laruence@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=dc2192c08766939700260128684255772ba4296f
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 [2012-11-30 06:31 UTC] laruence@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=dc2192c08766939700260128684255772ba4296f
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 [2012-12-19 17:55 UTC] derick@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=9e1d3cfdabf8665aec4d121bafa31cddd6ca7231
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 [2012-12-19 17:55 UTC] derick@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=dc2192c08766939700260128684255772ba4296f
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 [2013-11-17 09:32 UTC] laruence@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=9e1d3cfdabf8665aec4d121bafa31cddd6ca7231
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 [2014-10-07 23:21 UTC] stas@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=dc2192c08766939700260128684255772ba4296f
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 [2014-10-07 23:32 UTC] stas@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=dc2192c08766939700260128684255772ba4296f
Log: Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC