Fixed bug #63271 (SOAP wsdl cache is not enabled after initial requests)